# saucer_engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  main.cpp  toc_builder.py
doc/: saucer_doc_config
include/: anchored_rect.h  audio.h  camera.h  collision.h  color.h  component.h  core.h  debug.h  editor.h  engine.h  file.h  file_io.h  input.h  label_rect.h  lua_engine.h  lua_engine.tpp  patch_rect.h  rect.h  render_engine.h  render_object.h  resources.h  saucer_object.h  saucer_type_traits.h  scene.h  scene_node.h  scene_node.tpp  script.h  sprite.h  transform.h  vector.h  window.h
include/resources/: audiofile.h  font.h  image.h  lua_script.h  node_template.h  shader.h
res/fonts/Mono10_v0.95/: LICENSE (SIL OFL 1.1).txt  Mono10 Light.eot  Mono10 Regular.eot  UPDATE.txt
res/scripts/: chess.lua  piece.lua  root.lua  spawn.lua  test.lua
res/shaders/: basic.glsl  basic_fragment.fs  basic_vertex.vs
src/: anchored_rect.cpp  audio.cpp  audio.h  camera.cpp  camera.h  collision.cpp  collision.h  color.cpp  color.h  component.cpp  component.h  core.h  debug.cpp  debug.h  editor.cpp  editor.h  engine.cpp  engine.h  file.cpp  file_io.cpp  input.cpp  input.h  label_rect.cpp  label_rect.h  lua_engine.cpp  lua_engine.tpp  main.cpp  patch_rect.cpp  patch_rect.h  rect.cpp  rect.h  render_engine.cpp  render_engine.h  render_object.cpp  render_object.h  resources.cpp  resources.h  saucer_object.cpp  saucer_object.h  saucer_type_traits.h  (+10 more)
src/resources/: audiofile.cpp  audiofile.h  font.cpp  image.cpp  image.h  lua_script.cpp  lua_script.h  node_template.cpp  node_template.h  project_config.cpp  project_config.h  shader.cpp  shader.h
stockfish_12_linux_x64/: main.cpp
